feat: lights, new heightmap and speed in UI + accelerate + brake

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <!-- <div id="app"></div> -->
+
+    <div style="position: absolute; color:white; font-size: 36px; margin: 5px" id="Velocity">
+      Velocity: 0
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
